<resources>
    <string name="app_name" translatable="false">Preducation</string>
    <string name="text_create_new_password">Create New Password</string>
    <string name="iv_back">back</string>
    <string name="text_create_your_new_password">Create Your New Password</string>
    <string name="text_old_password">Old Password</string>
    <string name="text_new_password">New Password</string>
    <string name="text_continue">Continue</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_add_user">Add User</string>
    <string name="text_long_name">Long Name</string>
    <string name="text_email" translatable="false">Email</string>
    <string name="text_nomor_telepon" translatable="false">Nomor Telepon</string>
    <string name="text_62">+62</string>
    <string name="text_negara" translatable="false">Negara</string>
    <string name="text_masukkan_negara" translatable="false">Masukkan Negara</string>
    <string name="text_kota" translatable="false">Kota</string>
    <string name="text_masukkan_kota" translatable="false">Masukkan Kota</string>
    <string name="text_update">Update</string>
    <string name="text_transactions">Transactions</string>
    <string name="text_profile">Profile</string>
    <string name="text_name_guest">Guest</string>
    <string name="text_email_guest">guest@gmail.ac.in</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_payment_history">Payment History</string>
    <string name="text_logout">Logout</string>
    <string name="input_otp">Input OTP</string>
    <string name="the_otp_code_number_has_been_sent_to">The OTP code number has been sent to</string>
    <string name="resend_otp_code">Resend OTP Code</string>
    <string name="your_account_is_ready_to_use_you_will_be_redirected_to_the_home_page_in_a_few_seconds">Your Account is Ready to Use. \nYou will be redirected to the \nHome Page in a Few Seconds.</string>
    <string name="congratulation">Congratulation</string>
    <string name="search">Search</string>
    <string name="class_in_progress">Class in Progress</string>
    <string name="see_all">SEE ALL</string>
    <string name="all">All</string>
    <string name="progress">Progress</string>
    <string name="done">Done</string>
    <string name="categories">Categories</string>
    <string name="android_development" translatable="false">Android \nDevelopment</string>
    <string name="data_science" translatable="false">Data Science</string>
    <string name="_4_6" translatable="false">4.6</string>
    <string name="belajar_data_cleaning_dengan_nshorting_dengan_python" translatable="false">Belajar data cleaning dengan \nshorting dengan python</string>
    <string name="_19_moduls">• 19 Moduls</string>
    <string name="_60_hours">• 60 Hours</string>
    <string name="advanced_level">• Advanced Level</string>
    <string name="_40_complete">40% complete</string>
    <string name="text_password_min_8_character">Password min 8 character</string>
    <string name="text_already_have_an_account">Already have an Account ? Login Here</string>
    <string name="text_login_here">Login Here</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_create_password">Create Password</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_name">Name</string>
    <string name="text_getting_started">Getting Started.!</string>
    <string name="text_login">Login</string>
    <string name="text_password" translatable="false">Password</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_don_t_have_an_account_yet">Don\'t have an account yet ? Register Here</string>
    <string name="text_enter_without_logging_in">Enter Without Logging In</string>
    <string name="text_sorry_wrong_password">Sorry, wrong password</string>
    <string name="text_register_here">Register Here</string>
    <string name="text_about">About</string>
    <string name="text_curriculcum">Curriculcum</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_join_group_telegram">Join Group Telegram</string>
    <string name="text_about_class">About Class</string>
    <string name="text_this_class_is_intended_for">This Class Is Intended For</string>
    <string name="text_enroll_course">Enroll Course</string>
    <string name="text_enroll_this_course">Enroll this Course ?</string>
    <string name="text_yes_enroll">Yes, enroll</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_next">Next</string>
    <string name="text_other_classes">Other Classes</string>
    <string name="text_payment_details">Payment Details</string>
    <string name="text_price">Price</string>
    <string name="text_ppn_11" translatable="false">PPN 11%</string>
    <string name="text_total_payment">Total Payment</string>
    <string name="text_bank_transfer">Bank Transfer</string>
    <string name="text_credit_card">Credit Card</string>
    <string name="text_card_number">Card Number</string>
    <string name="text_card_holder_name">Card Holder Name</string>
    <string name="text_cvv">CVV</string>
    <string name="text_expiry_date">Expiry Date</string>
    <string name="text_congratulations">Congratulations</string>
    <string name="text_your_payment_is_successfully_purchase_a_new_course">Your Payment is Successfully. Purchase a New Course</string>
    <string name="text_start_study">Start Study</string>
    <string name="text_back_to_home">Back to Home</string>
    <string name="desc_search">image view search</string>
    <string name="text_search">text view search</string>
    <string name="tv_search">Search for...</string>
    <string name="text_title_category">Categories</string>
    <string name="text_to_see_all">See All</string>
    <string name="desc_iv_category_course">desc image view category course</string>
    <string name="text_popular_course">Popular Courses</string>
    <string name="desc_iv_popular_course">iv_popular_course</string>
    <string name="tv_category_popular" translatable="false">Data Science</string>
    <string name="tv_rating_popular_course" translatable="false">4.7</string>
    <string name="desc_ic_arrow_left">ic_arrow_left</string>
    <string name="tv_header_see_all_popular_course">Popular Course</string>
    <string name="text_header_name">Hi, %s</string>
    <string name="text_header_name_non_login">Hi, Guest</string>
    <string name="text_header_greeting">What would you like to learn today ?\nSearch Below.</string>
    <string name="tv_title_course">Belajar data cleaning dan sorting\ndengan Phyton</string>
    <string name="tv_level_course">Advanced Level</string>
    <string name="tv_module_course">19 Module</string>
    <string name="tv_duration_course">60 Hours</string>
    <string name="tv_price_course">Rp 249.000</string>
    <string name="desc_dialog_icon">iv_dialog_non_login</string>
    <string name="dialog_title">Sorry</string>
    <string name="dialog_message">You have to make an account for access\nthis class</string>
    <string name="dialog_sign_up_button">Sign Up</string>
    <string name="iv_arrow_right">iv_arrow_right</string>
    <string name="popular_course_not_found">Popular course not found!</string>
    <string name="iv_level_course">iv_level_course</string>
    <string name="iv_module_course">iv_module_course</string>
    <string name="iv_rating">iv_rating</string>
    <string name="iv_time_course">iv_time_course</string>
    <string name="tv_sign_up">Sign Up</string>
    <string name="course_is_empty">Course is Empty</string>
    <string name="category_is_empty">Category is Empty</string>
    <string name="desc_iv_logo_app">iv_logo_app</string>
    <string name="tv_reset_password">Reset Password</string>
    <string name="tv_title_email">Email</string>
    <string name="tv_send_email">Send</string>
    <string name="desc_arrow_right">arrow_right</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="reset_password_successful">Reset Password Successful</string>
    <string name="invalid_or_expired_link">Invalid or expired link</string>
    <string name="text_home">Home</string>
    <string name="text_notification">Notification</string>
    <string name="text_class">Class</string>
    <string name="text_course">Course</string>
    <string name="text_preducation" translatable="false">Preducation</string>
    <string name="text_online_learning" translatable="false">Online Learning</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_premium">Premium</string>
    <string name="text_freemium">Freemium</string>
    <string name="text_filter">Filter</string>
    <string name="text_today">Today</string>
    <string name="text_clear">Clear</string>
    <string name="text_sort">Sort</string>
    <string name="text_class_topic">Class Topic</string>
    <string name="text_profile_update_success">Profile updated successfully</string>
    <string name="text_change_profile_failed">Change Profile Failed</string>
    <string name="text_logout_dialog">Do you want to logout ?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_length">Password should be at least 8 characters long</string>
    <string name="edit_profile_successful">Edit Profile Successful</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_error_long_name_empty">Name should not be empty</string>
    <string name="text_error_long_name_invalid_characters">Name Invalid Characters</string>
    <string name="text_error_country_invalid_characters">Country Invalid Characters</string>
    <string name="text_error_city_invalid_characters">City Invalid Characters</string>
    <string name="text_error_phone_number_empty">Phone Number should not be empty</string>
    <string name="text_error_phone_number_invalid_characters">Phone Number Invalid Characters</string>
    <string name="text_error_country_empty">Country should not be empty</string>
    <string name="text_error_city_empty">City should not be empty</string>
    <string name="text_error_form_not_valid">Form is not valid</string>
    <string name="text_error_old_new_password_match">Old and new passwords cannot be the same.</string>
    <string name="text_error_update_password">Failed to update password. Please try again.</string>
    <string name="text_error_password_invalid">Password must be at least 8 characters long.</string>
    <string name="text_error_confirm_password_mismatch">Confirm password does not match the new password.</string>
    <string name="text_error_name_cannot_empy">Name should not be empty</string>
    <string name="text_number_phone_empty">Phone number should not be empty</string>
    <string name="text_number_phone_invalid">Enter a valid format phone number</string>
    <string name="register_successfull">Register Successfull</string>
    <string name="register_failed">Register Failed</string>
    <string name="login_success">Login Successfull</string>
    <string name="login_failed">Login Failed</string>
    <string name="text_version">Versi 1.0.1</string>
    <string name="you_need_to_login">You need to login</string>
    <string name="empty_class_progress">You haven\'t taken any classes yet</string>
    <string name="empty_progress_category">Empty progress category</string>
    <string name="course">Course</string>
    <string name="text_notification_name">New Category Course!</string>
    <string name="text_date">12 Desember 2023</string>
    <string name="text_notification_desc">New the 3D Design Course is Available Now!</string>
</resources>