<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/text_home"/>

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_menu_notification"
        android:title="@string/text_notification"/>

    <item
        android:id="@+id/navigation_class"
        android:icon="@drawable/ic_menu_class"
        android:title="@string/text_class"/>

    <item
        android:id="@+id/navigation_course"
        android:icon="@drawable/ic_menu_course"
        android:title="@string/text_course"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_edit_profile"
        android:title="@string/text_profile"/>

</menu>