<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_popular_course"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_iv_popular_course"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/ll_category_and_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_popular_course"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_category_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/app_color_primary_container"
                android:textSize="12sp"
                tools:text="@string/tv_category_popular" />

            <LinearLayout
                android:id="@+id/ll_rating_popular_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_rating"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="6dp"
                    android:contentDescription="@string/iv_rating"
                    android:src="@drawable/ic_star" />

                <TextView
                    android:id="@+id/tv_rating_popular_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:text="@string/tv_rating_popular_course" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_title_and_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="6dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/iv_popular_course"
            app:layout_constraintTop_toBottomOf="@id/ll_category_and_rating">

            <TextView
                android:id="@+id/tv_title_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/montserrat_bold"
                android:maxLines="2"
                android:textSize="10sp"
                tools:text="@string/tv_title_course" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_detail_popular_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            app:layout_constraintStart_toEndOf="@+id/iv_popular_course"
            app:layout_constraintTop_toBottomOf="@id/ll_title_and_author">

            <LinearLayout
                android:id="@+id/ll_detail_popular_course_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/iv_module_course"
                    android:layout_width="6dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/iv_module_course"
                    android:src="@drawable/ic_ellipse" />

                <TextView
                    android:id="@+id/tv_module_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="6dp"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/app_color_on_primary_container"
                    android:textSize="8sp"
                    tools:text="@string/tv_module_course" />

                <ImageView
                    android:id="@+id/iv_time_course"
                    android:layout_width="6dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/iv_time_course"
                    android:src="@drawable/ic_ellipse" />

                <TextView
                    android:id="@+id/tv_duration_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="6dp"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/app_color_on_primary_container"
                    android:textSize="8sp"
                    tools:text="@string/tv_duration_course" />

                <ImageView
                    android:id="@+id/iv_level_course"
                    android:layout_width="6dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/iv_level_course"
                    android:src="@drawable/ic_ellipse" />

                <TextView
                    android:id="@+id/tv_level_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="6dp"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/app_color_on_primary_container"
                    android:textSize="8sp"
                    tools:text="@string/tv_level_course" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_price_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/app_color_primary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_popular_course"
            app:layout_constraintTop_toBottomOf="@id/cl_detail_popular_course"
            tools:text="@string/tv_price_course" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>