<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="248dp"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="6dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_popular_course"
            android:layout_width="230dp"
            android:layout_height="126dp"
            android:contentDescription="@string/desc_iv_popular_course"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/ll_category_and_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_popular_course">

            <TextView
                android:id="@+id/tv_category_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/app_color_primary_container"
                android:textSize="12sp"
                tools:text="@string/tv_category_popular" />

            <LinearLayout
                android:id="@+id/ll_rating_popular_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_rating"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="6dp"
                    android:contentDescription="@string/iv_rating"
                    android:src="@drawable/ic_star" />

                <TextView
                    android:id="@+id/tv_rating_popular_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:textSize="12sp"
                    tools:text="@string/tv_rating_popular_course" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_title_and_owner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="2dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_category_and_rating">

            <TextView
                android:id="@+id/tv_title_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:maxLines="2"
                android:minLines="2"
                android:textSize="14sp"
                tools:text="@string/tv_title_course" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_detail_popular_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_title_and_owner">

            <LinearLayout
                android:id="@+id/ll_level_module"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_module_course"
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:contentDescription="@string/iv_module_course"
                    android:src="@drawable/ic_ellipse" />

                <TextView
                    android:id="@+id/tv_module_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="6dp"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/app_color_on_primary_container"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"
                    tools:text="@string/tv_module_course" />

                <ImageView
                    android:id="@+id/iv_time_course"
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:contentDescription="@string/iv_time_course"
                    android:src="@drawable/ic_ellipse" />

                <TextView
                    android:id="@+id/tv_duration_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="6dp"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/app_color_on_primary_container"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"
                    tools:text="@string/tv_duration_course" />

                <ImageView
                    android:id="@+id/iv_level_course"
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:contentDescription="@string/iv_level_course"
                    android:src="@drawable/ic_ellipse" />

                <TextView
                    android:id="@+id/tv_level_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="6dp"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/app_color_on_primary_container"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"
                    tools:text="@string/tv_level_course" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_price_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/app_color_primary"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_detail_popular_course"
            tools:text="@string/tv_price_course" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_progress_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_detail_popular_course">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="40"
                android:progressDrawable="@drawable/bg_progress_bar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/_40_complete"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@id/progress_bar"
                app:layout_constraintStart_toStartOf="@id/progress_bar"
                app:layout_constraintTop_toTopOf="@id/progress_bar"
                tools:ignore="SmallSp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>